--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2Q9LBWP86G"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-2Q9LBWP86G');
+  </script>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>OoruLabs Podcast</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="India's premier urban affiars podcast, OoruLabs, hosted by Sathya Sankaran. Opinions and solutions to city issues." name="description">
+  <meta content="urban, affairs, podcast, Sathya, Sankaran, city, issues, india, bengaluru, cities, country, traffic, transport, transportation, mobility, energy, roads, hot, topics, current, news" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
@@ -116,12 +126,125 @@
 
   <main id="main" data-aos="fade" data-aos-delay="1500">
 
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials">
+      <div class="container">
+
+        <div class="section-header">
+          <h2>Testimonials</h2>
+          <p>What viewers are saying</p>
+        </div>
+
+        <div class="slides-3 swiper">
+          <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  I love the new intro! I hope you're all able to keep this going for years to come. There is not enough content in this space especially in the Indian context, let alone a Bangalore context. There needs to be a lot more education on how to make a city livable again. Keep up the great work and looking forward to all the coming episodes!
+                </p>
+                <div class="profile mt-auto">
+                  <img src="assets/img/testimonials/pranavbalakrishnan5302.jpeg" class="testimonial-img" alt="">
+                  <h3>@pranavbalakrishnan5302</h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  As with most of your sessions Sathya, I learnt a lot of interesting facts from this conversation too. It is highly educative for anyone interested in knowing how their cities function and cope with issues of governance. Keep it coming!
+                </p>
+                <div class="profile mt-auto">
+                  <img src="assets/img/testimonials/susheelnair6377.jpeg" class="testimonial-img" alt="">
+                  <h3>@susheelnair6377</h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  Ahh this was fun to listen to. Thanks for this! Looking forward to watch more :)
+                </p>
+                <div class="profile mt-auto">
+                  <img src="assets/img/testimonials/lakshmanr4773.jpeg" class="testimonial-img" alt="">
+                  <h3>@lakshmanr4773</h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  Beautiful conversation. Thank you so much ! I learnt a lot ❤
+                </p>
+                <div class="profile mt-auto">
+                  <img src="assets/img/testimonials/yogadajoshi3908.jpeg" class="testimonial-img" alt="">
+                  <h3>@yogadajoshi3908</h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  Loved this episode thank you! I've been lurking around this channel for quite a while now, I loved all of the episodes, pls keep churning them out! 
+                </p>
+                <div class="profile mt-auto">
+                  <img src="assets/img/testimonials/majorscreamer.jpeg" class="testimonial-img" alt="">
+                  <h3>@majorscreamer</h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  Awesome podcast.. The discussion on k100 was needed.. Thanks for all your information.. Good job 👍👍👍👏👏
+                </p>
+                <div class="profile mt-auto">
+                  <img src="assets/img/testimonials/daviscricket5106.jpeg" class="testimonial-img" alt="">
+                  <h3>@daviscricket5106</h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section><!-- End Testimonials Section -->
+
     <!-- ======= Gallery Section ======= -->
     <section id="gallery" class="gallery">
-      <div class="container-fluid">
+      <div class="container">
         <div class="section-header">
           <h2>Featured Guests</h2>
+          <p>Who came on the show</p>
         </div>
+      </div>
+
+      <div class="container-fluid">
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
