--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="section-header">
           <h2>Testimonials</h2>
-          <p>What viewers are saying</p>
+          <p>What viewers think of the podcast</p>
         </div>
 
         <div class="slides-3 swiper">
@@ -240,7 +240,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Featured Guests</h2>
-          <p>Who came on the show</p>
+          <p>Some of the experts who spoke on the podcast</p>
         </div>
       </div>
 
