--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>Welcome to <span>OoruLabs</span>, the premier urban affairs podcast in the country</h2>
-          <p>Now in Season 2, it is hosted by <span>Sathya Sankaran</span> an Urban Communicator and Entreprenuer.</p>
+          <h2>Welcome to <span>OoruLabs</span>, the premier urban affairs podcast in India</h2>
+          <p>Now in Season 2, it is hosted by Sathya Sankaran, an Urban Communicator and Entreprenuer.</p>
           <a href="https://www.youtube.com/@oorulabs" class="btn-get-started text-dark" target="_blank">Watch on YouTube</a>
         </div>
       <div class="row mt-3 justify-content-center">
@@ -125,6 +125,62 @@
   </section><!-- End Hero Section -->
 
   <main id="main" data-aos="fade" data-aos-delay="1500">
+
+    <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="pricing">
+      <div class="container">
+
+        <div class="section-header">
+          <h2>Stats</h2>
+          <p>Join the others</p>
+        </div>
+
+        <div class="row gy-4 gx-lg-5">
+
+          <div class="col-lg-6">
+            <div class="pricing-item d-flex justify-content-between">
+              <h3>Seasons</h3>
+              <h4>2</h4>
+            </div>
+          </div><!-- End Pricing Item -->
+
+          <div class="col-lg-6">
+            <div class="pricing-item d-flex justify-content-between">
+              <h3>Episodes</h3>
+              <h4>53</h4>
+            </div>
+          </div><!-- End Pricing Item -->
+
+          <div class="col-lg-6">
+            <div class="pricing-item d-flex justify-content-between">
+              <h3>Guests</h3>
+              <h4>50</h4>
+            </div>
+          </div><!-- End Pricing Item -->
+
+          <div class="col-lg-6">
+            <div class="pricing-item d-flex justify-content-between">
+              <h3>Views</h3>
+              <h4>41.2K</h4>
+            </div>
+          </div><!-- End Pricing Item -->
+
+          <div class="col-lg-6">
+            <div class="pricing-item d-flex justify-content-between">
+              <h3>Subscribers</h3>
+              <h4>1.7K</h4>
+            </div>
+          </div><!-- End Pricing Item -->
+
+          <div class="col-lg-6">
+            <div class="pricing-item d-flex justify-content-between">
+              <h3>Hours watched</h3>
+              <h4>1.1K</h4>
+            </div>
+          </div><!-- End Pricing Item -->
+
+        </div>
+    </section><!-- End Pricing Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
@@ -250,7 +306,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/chrisbruntlett.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Chris Bruntlett</p>
+                <p class="gslide-title text-center">Chris Bruntlett <br>Dutch Cycling Embassy</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -258,7 +314,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/paulbarter.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Paul Barter</p>
+                <p class="gslide-title text-center">Paul Barter <br>Reinventing Parking</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -266,7 +322,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/rutholdenziel.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Ruth Oldenziel</p>
+                <p class="gslide-title text-center">Ruth Oldenziel <br>Eindhoven University of Technology</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -274,7 +330,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/dirkdejager.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Dirk De Jager</p>
+                <p class="gslide-title text-center">Dirk De Jager <br>Dy. Mayor, Amsterdam</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -282,7 +338,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/ashwinmahesh.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Ashwin Mahesh</p>
+                <p class="gslide-title text-center">Ashwin Mahesh <br>Founder, Lvbl</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -290,7 +346,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/anjalikmohan.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Anjali Mohan</p>
+                <p class="gslide-title text-center">Anjali Mohan <br>Partner, INDE</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -298,7 +354,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/ravichandarv.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Ravichandar V</p>
+                <p class="gslide-title text-center">Ravichandar V <br>Member, Bengaluru Restructuting Committee</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -306,7 +362,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/nareshvn.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Naresh V Narashiman</p>
+                <p class="gslide-title text-center">Naresh V Narashiman, <br>Managing Partner, Venkatraman Associates</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -314,7 +370,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/vinayakbharne.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Vinayak Bharne</p>
+                <p class="gslide-title text-center">Vinayak Bharne <br>USC School of Architecture</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -322,7 +378,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/revathyashok.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Revathy Ashok</p>
+                <p class="gslide-title text-center">Revathy Ashok <br>CEO, BPAC</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -330,7 +386,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/rajcherubal.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Raj Cherubal</p>
+                <p class="gslide-title text-center">Raj Cherubal <br>UNDP</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -338,7 +394,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/srikanthvishwanathan.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Srikanth Vishwanathan</p>
+                <p class="gslide-title text-center">Srikanth Vishwanathan <br>CEO, Janaagraha</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -346,7 +402,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/zenrainman.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Vishwanath Srikantaiah</p>
+                <p class="gslide-title text-center">Vishwanath Srikantaiah <br>Founder, BIOME</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -354,7 +410,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/pawanmulukutla.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Pawan Mulukutla</p>
+                <p class="gslide-title text-center">Pawan Mulukutla <br>Director, WRI</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -362,7 +418,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/shreyagadepalli.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Shreya Gadepalli</p>
+                <p class="gslide-title text-center">Shreya Gadepalli <br>Founder, Urban Works</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -370,7 +426,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/amitbhatt.webp" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Amit Bhatt</p>
+                <p class="gslide-title text-center">Amit Bhatt <br>MD, ICCT</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -378,7 +434,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/alokpkumar.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Alok Prasanna Kumar</p>
+                <p class="gslide-title text-center">Alok Prasanna Kumar <br>Co-founder, Vidhi legal</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -386,7 +442,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/ranjitgadgil.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Ranjit Gadgil</p>
+                <p class="gslide-title text-center">Ranjit Gadgil <br>Programme Director, Parisar</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -394,7 +450,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/srinualavilli.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Srinivas Alavilli</p>
+                <p class="gslide-title text-center">Srinivas Alavilli <br>Fellow, WRI</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -402,7 +458,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/tarakrishnaswamy.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Tara Krishnaswamy</p>
+                <p class="gslide-title text-center">Tara Krishnaswamy <br>Founder, Shakti</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -410,7 +466,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/ravigadepalli.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Ravi Gadepalli</p>
+                <p class="gslide-title text-center">Ravi Gadepalli, <br>Consultant, World Bank & ADB</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -418,7 +474,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/satyaarikutharam.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Satya Arikutharam</p>
+                <p class="gslide-title text-center">Satya Arikutharam <br>Transport Consultant</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -426,7 +482,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/amitgupta.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Amit Gupta</p>
+                <p class="gslide-title text-center">Amit Gupta <br>CEO, Yulu</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -434,7 +490,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/arjitsoni.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title">Arjit Soni</p>
+                <p class="gslide-title text-center">Arjit Soni <br>CEO, MyByk</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
