hero title change

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>Welcome to <span>OoruLabs</span>, the premier urban affairs podcast in India</h2>
+          <h2>Welcome to <span>OoruLabs</span>, India's premier urban affairs podcast</h2>
           <p>Now in Season 2, it is hosted by Sathya Sankaran, an Urban Communicator and Entreprenuer.</p>
           <a href="https://www.youtube.com/@oorulabs" class="btn-get-started text-dark" target="_blank">Watch on YouTube</a>
         </div>
