--- a/index.html
+++ b/index.html
@@ -102,29 +102,30 @@
 
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="1500">
+  <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="1500" style="background-image: url('assets/img/OoruLabs Youtube banner-2.png');">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>Welcome to <span>OoruLabs</span>, India's premier urban affairs podcast</h2>
-          <p>Now in Season 2, it is hosted by Sathya Sankaran, an Urban Communicator and Entreprenuer.</p>
-          <a href="https://www.youtube.com/@oorulabs" class="btn-get-started text-dark" target="_blank">Watch on YouTube</a>
-        </div>
-      <div class="row mt-3 justify-content-center">
-        <div class="col-lg-6 text-center">
-            <a href="https://www.youtube.com/@oorulabs" class="youtube" target="_blank"><i class="bi bi-youtube" style="font-size: 2rem;"></i></a>&nbsp;&nbsp;
-            <a href="https://open.spotify.com/show/6EYcxIPGW0UQvmkk67Ox0x?si=efbf1c2c47d449be" class="spotify" target="_blank"><i class="bi bi-spotify" style="font-size: 2rem;"></i></a>&nbsp;&nbsp;
-            <a href="https://podcasts.apple.com/us/podcast/the-oorulabs-podcast/id1682407685" class="apple" target="_blank"><i class="bi bi-broadcast" style="font-size: 2rem;"></i></a>&nbsp;&nbsp;
-            <a href="https://www.instagram.com/oorulabs/" class="instagram" target="_blank"><i class="bi bi-instagram" style="font-size: 2rem;"></i></a>&nbsp;&nbsp;
-            <a href="https://www.facebook.com/oorulabs" class="facebook" target="_blank"><i class="bi bi-facebook" style="font-size: 2rem;"></i></i></a>&nbsp;&nbsp;
-            <a href="mailto:oorulabs@gmail.com" class="facebook" target="_blank"><i class="bi bi-envelope-at-fill" style="font-size: 2rem;"></i></i></a>
-          </div>
+          <h2 class="text-dark">Welcome to <span>OoruLabs</span>, India's premier urban affairs podcast</h2>
+          <p class="text-dark">Now in Season 2, it is hosted by Sathya Sankaran, an Urban Communicator and Entreprenuer.</p>
+          <a href="https://www.youtube.com/@oorulabs" class="btn-get-started" target="_blank">Watch on YouTube</a>
         </div>
       </div>
+      <div class="row mt-5 justify-content-center">
+        <div class="col-lg-6 text-center logo-panel">
+            <a href="https://www.youtube.com/@oorulabs" class="youtube" target="_blank"><i class="bi bi-youtube"></i></a>&nbsp;&nbsp;
+            <a href="https://open.spotify.com/show/6EYcxIPGW0UQvmkk67Ox0x?si=efbf1c2c47d449be" class="spotify" target="_blank"><i class="bi bi-spotify"></i></a>&nbsp;&nbsp;
+            <a href="https://podcasts.apple.com/us/podcast/the-oorulabs-podcast/id1682407685" class="apple" target="_blank"><i class="bi bi-broadcast"></i></a>&nbsp;&nbsp;
+            <a href="https://www.instagram.com/oorulabs/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>&nbsp;&nbsp;
+            <a href="https://www.facebook.com/oorulabs" class="facebook" target="_blank"><i class="bi bi-facebook"></i></i></a>&nbsp;&nbsp;
+            <a href="mailto:oorulabs@gmail.com" class="facebook" target="_blank"><i class="bi bi-envelope-at-fill"></i></i></a>
+          </div>
+        </div>
     </div>
   </section><!-- End Hero Section -->
 
   <main id="main" data-aos="fade" data-aos-delay="1500">
+
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing">
