--- a/index.html
+++ b/index.html
@@ -504,9 +504,9 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/guests/arjitsoni.jpg" class="img-fluid" alt="">
+              <img src="assets/img/guests/ashishverma.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Arjit Soni <br>CEO, MyByk</p>
+                <p class="gslide-title text-center">Ashish Verma <br>Head, IISC, IST Lab</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
