--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </nav> <!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://www.youtube.com/@oorulabs" class="youtube" target="_blank"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UCksnReFEAAK47cTVZBVQJrw?sub_confirmation=1" class="youtube" target="_blank"><i class="bi bi-youtube"></i></a>
         <a href="https://open.spotify.com/show/6EYcxIPGW0UQvmkk67Ox0x?si=efbf1c2c47d449be" class="spotify" target="_blank"><i class="bi bi-spotify"></i></a>
         <a href="https://podcasts.apple.com/us/podcast/the-oorulabs-podcast/id1682407685" class="apple" target="_blank"><i class="bi bi-broadcast"></i></a>
         <a href="https://www.instagram.com/oorulabs/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
@@ -108,7 +108,7 @@
         <div class="col-lg-6 text-center">
           <h2 class="text-dark">Welcome to <span>OoruLabs</span>, India's premier urban affairs podcast</h2>
           <p class="text-dark">Now in Season 2, it is hosted by Sathya Sankaran, an Urban Communicator and Entreprenuer.</p>
-          <a href="https://www.youtube.com/@oorulabs" class="btn-get-started" target="_blank">Watch on YouTube</a>
+          <a href="https://www.youtube.com/channel/UCksnReFEAAK47cTVZBVQJrw?sub_confirmation=1" class="btn-get-started" target="_blank">Watch on YouTube</a>
         </div>
       </div>
       <div class="row mt-5 justify-content-center">
