--- a/index.html
+++ b/index.html
@@ -148,21 +148,21 @@
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Episodes</h3>
-              <h4>55</h4>
+              <h4>65</h4>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Guests</h3>
-              <h4>53</h4>
+              <h4>60</h4>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Views</h3>
-              <h4>55K</h4>
+              <h4>65K</h4>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -176,7 +176,7 @@
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Hours watched</h3>
-              <h4>2K</h4>
+              <h4>3K</h4>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -507,6 +507,30 @@
               <img src="assets/img/guests/ashishverma.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <p class="gslide-title text-center">Ashish Verma <br>Head, IISC, IST Lab</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/pranaykotasthane.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Pranay Kotasthane <br>Deputy Director, Takshashila Institution</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/AnupamManur.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Anupam Manur <br>Assistant Professor, Takshashila Institution</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/sridharkrishna.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Sridhar Krishna <br>Senior Scholar, Takshashila Institution</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
