--- a/index.html
+++ b/index.html
@@ -534,6 +534,22 @@
               </div>
             </div>
           </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/MaliniGoyal.png" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Malini Goyal <br>Co-Author, Unboxing BLR</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/UdayaKumar.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Udayakumar PL <br>Historian, Inscription Stones</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
 
         </div>
 
