--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="col-lg-6 text-center">
           <h2 class="text-dark">Welcome to <span>OoruLabs</span>, India's premier urban affairs podcast</h2>
           <p class="text-dark">Now in Season 2, it is hosted by Sathya Sankaran, an Urban Communicator and Entreprenuer.</p>
-          <a href="https://www.youtube.com/channel/UCksnReFEAAK47cTVZBVQJrw?sub_confirmation=1" class="btn-get-started" target="_blank">Watch on YouTube</a>
+          <a href="https://www.youtube.com/channel/UCksnReFEAAK47cTVZBVQJrw/join" class="btn-get-started" target="_blank">Memberships now open</a>
         </div>
       </div>
       <div class="row mt-5 justify-content-center">
