--- a/index.html
+++ b/index.html
@@ -231,6 +231,21 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
+                  Absolutely enjoying your show "Ooru Labs Podcast". Thanks for your work. Transportation and Urban Planning communities are getting lot of learning "on the go".
+                </p>
+                <div class="profile mt-auto">
+                  <img src="assets/img/testimonials/ShankaraSuresh.jpeg" class="testimonial-img" alt="">
+                  <h3>@shankarasuresh</h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
                   Really really meaningful and highly relevant conversation. Thanks for these wonderful discussions!
                 </p>
                 <div class="profile mt-auto">
