--- a/index.html
+++ b/index.html
@@ -565,6 +565,14 @@
               </div>
             </div>
           </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/SharifQamar.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Sharif Qamar<br>Asst Manager, TERI</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
 
         </div>
 
