--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <title>OoruLabs Podcast</title>
   <meta content="India's premier urban affiars podcast, OoruLabs, hosted by Sathya Sankaran. Opinions and solutions to city issues." name="description">
-  <meta content="urban, affairs, podcast, Sathya, Sankaran, city, issues, india, bengaluru, cities, country, traffic, transport, transportation, mobility, energy, roads, hot, topics, current, news" name="keywords">
+  <meta content="Urban Transport, Cycling, Walking, transportation, urban, planning, cities, traffic, bus, trains, transport, liveability, sustainability, traffic, jams, india, Bengaluru, city, congestion, climate, climate change, sustainable cities, electric vehicles, energy, public, policy, policies, government, urban, affairs, podcast, Sathya, Sankaran, city, issues, india, bengaluru, cities, country, traffic, transport, transportation, mobility, energy, roads, hot, topics, current, news" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
