--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <a href="https://podcasts.apple.com/us/podcast/the-oorulabs-podcast/id1682407685" class="apple" target="_blank"><i class="bi bi-broadcast"></i></a>
         <a href="https://www.instagram.com/oorulabs/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.facebook.com/oorulabs" class="facebook" target="_blank"><i class="bi bi-facebook"></i></i></a>
+        <a href="https://chat.whatsapp.com/HquObSYDOFz5DXP6TEh07W" class="whatsapp" target="_blank"><i class="bi bi-whatsapp"></i></a>
         <a href="mailto:oorulabs@gmail.com" class="facebook" target="_blank"><i class="bi bi-envelope-at-fill"></i></i></a>
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -118,6 +119,7 @@
             <a href="https://podcasts.apple.com/us/podcast/the-oorulabs-podcast/id1682407685" class="apple" target="_blank"><i class="bi bi-broadcast"></i></a>&nbsp;&nbsp;
             <a href="https://www.instagram.com/oorulabs/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>&nbsp;&nbsp;
             <a href="https://www.facebook.com/oorulabs" class="facebook" target="_blank"><i class="bi bi-facebook"></i></i></a>&nbsp;&nbsp;
+            <a href="https://chat.whatsapp.com/HquObSYDOFz5DXP6TEh07W" class="whatsapp" target="_blank"><i class="bi bi-whatsapp"></i></a>&nbsp;&nbsp;
             <a href="mailto:oorulabs@gmail.com" class="facebook" target="_blank"><i class="bi bi-envelope-at-fill"></i></i></a>
           </div>
         </div>
