--- a/index.html
+++ b/index.html
@@ -203,6 +203,21 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
+                  This is such a clear communication- a brilliant story. The citizen knowledge is so fomidable. I love Ooru labs role.
+                </p>
+                <div class="profile mt-auto">
+                  <img src="assets/img/testimonials/pushpanflow.jpeg" class="testimonial-img" alt="">
+                  <h3>@Pushpanflow</h3>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
                   I love the new intro! I hope you're all able to keep this going for years to come. There is not enough content in this space especially in the Indian context, let alone a Bangalore context. There needs to be a lot more education on how to make a city livable again. Keep up the great work and looking forward to all the coming episodes!
                 </p>
                 <div class="profile mt-auto">
